--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -53,10 +53,12 @@ footer .wrap {max-width:1024px;margin:0 auto;}
 .about section.career .wrap div .item .position {display:block;margin-top:16px;}
 
 .blog {}
-.blog .wrap {max-width:1024px;margin:0 auto;
+.blog .wrap {
+  max-width:1024px;margin:0 auto;
   display:flex;
   align-items: flex-start;
 }
+.blog.list .post {order:0;}
 .blog.list .post .item {margin:56px 0;}
 .blog.list .post .item h2 {color:rgb(205,85,84);margin-bottom:8px;}
 .blog.list .post .item .newwindow {
@@ -70,11 +72,36 @@ footer .wrap {max-width:1024px;margin:0 auto;}
 .blog.list .post .item p.meta {}
 .blog.list .post .item p.summary {margin:8px 0;}
 
-.blog.read .post {padding:48px 8px;}
+.blog.read .wrap {margin:48px auto;}
+.blog.read .post {order:0;padding:0 8px;min-width:768px;}
 .blog.read .post h1.title {font-size:42px;}
 .blog.read .post p.meta {color:gray;margin-bottom:42px;}
-
 .blog.read .post .content {}
+.blog.read .toc {
+  order: 1;
+  width: 224px; /* 18rem */
+  position: sticky;
+  top: 8px; /* 10rem */
+  /* max-height: calc(((100vh - 7rem) - 3rem) - 3rem); */
+  padding: 0 8px;
+  overflow: auto;
+  flex-shrink: 0;
+  border-left: 2px solid rgb(230,230,230);
+  line-height:1.15;
+  /* color: #3d3d3f; */
+}
+.blog.read .toc ul {
+  padding-left: 8px;
+  list-style: none;
+  margin: 0px;
+}
+.blog .toc ul li {
+  margin-bottom: 4px;
+}
+
+.blog .toc ul li a {
+  color: #888;
+}
 
 .markdown-body {font-size:16px;line-height:1.4em;word-break:break-word;}
 .markdown-body h1 {font-size:200%;margin-top:1.5em;margin:1.5em 0px 0.67em;}
@@ -90,12 +117,41 @@ footer .wrap {max-width:1024px;margin:0 auto;}
 .markdown-body h2 {font-size: 1.5em;}
 
 .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6 {
+  position: relative;
   border-bottom: 1px solid #d8dee4;
   margin-top: 24px;
   padding-bottom: .3em;
   margin-bottom: 16px;
   font-weight: 600;
   line-height: 1.25;
+}
+
+.markdown-body h1 .anchor svg,
+.markdown-body h2 .anchor svg,
+.markdown-body h3 .anchor svg,
+.markdown-body h4 .anchor svg,
+.markdown-body h5 .anchor svg,
+.markdown-body h6 .anchor svg {visibility:hidden;}
+
+.markdown-body h1:hover .anchor svg,
+.markdown-body h2:hover .anchor svg,
+.markdown-body h3:hover .anchor svg,
+.markdown-body h4:hover .anchor svg,
+.markdown-body h5:hover .anchor svg,
+.markdown-body h6:hover .anchor svg,
+.markdown-body h1:focus .anchor svg,
+.markdown-body h2:focus .anchor svg,
+.markdown-body h3:focus .anchor svg,
+.markdown-body h4:focus .anchor svg,
+.markdown-body h5:focus .anchor svg,
+.markdown-body h6:focus .anchor svg {visibility:visible;}
+
+.markdown-body .anchor.before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+  padding-right: 4px;
 }
 
 .markdown-body>*:first-child {margin-top: 0;}
