--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -89,6 +89,7 @@ footer .wrap {max-width:1024px;margin:0 auto;}
   border-left: 2px solid rgb(230,230,230);
   line-height:1.15;
   /* color: #3d3d3f; */
+  margin-left: 12px;
 }
 .blog.read .toc ul {
   padding-left: 8px;
@@ -101,6 +102,7 @@ footer .wrap {max-width:1024px;margin:0 auto;}
 
 .blog .toc ul li a {
   color: #888;
+  font-size: 12px;
 }
 
 .markdown-body {font-size:16px;line-height:1.4em;word-break:break-word;}
