--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -64,7 +64,10 @@ footer .wrap {max-width:1024px;margin:0 auto;}
   }
 }
 
-.blog.list .post {order:0;}
+.blog.list .post {order:0;padding:0 24px;}
+@media (min-width: 1300px) {
+  .blog.list .post {padding:0 8px;}
+}
 .blog.list .post .item {margin:56px 0;}
 .blog.list .post .item h2 {color:rgb(205,85,84);margin-bottom:8px;}
 .blog.list .post .item .newwindow {
@@ -79,7 +82,7 @@ footer .wrap {max-width:1024px;margin:0 auto;}
 .blog.list .post .item p.summary {margin:8px 0;}
 
 .blog.read .wrap {margin:48px auto;}
-.blog.read .post {order:0;padding:0 8px;min-width:768px;}
+.blog.read .post {order:0;padding:0 24px;min-width:768px;}
 .blog.read .post h1.title {font-size:42px;}
 .blog.read .post p.meta {color:gray;margin-bottom:42px;}
 .blog.read .post .content {}
