--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -99,6 +99,11 @@ footer .wrap {max-width:1024px;margin:0 auto;}
   margin-bottom:12px;
 }
 
+@media (max-width: 768px) {
+  .blog.read .post {padding:0 8px;}
+  .blog.read .toc {padding:0 8px;}
+}
+
 @media (min-width: 1300px) {
   .blog.read .post {min-width:768px;}
   .blog.read .toc {
@@ -106,7 +111,6 @@ footer .wrap {max-width:1024px;margin:0 auto;}
     width: 224px;
     position: sticky;
     top: 8px;
-    padding: 0 8px;
     overflow: auto;
     flex-shrink: 0;
     border-left: 2px solid rgb(230,230,230);
