[모바일대응/스타일] 잔수정

--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -29,6 +29,8 @@ header ul.contacts li a svg {fill:#222;}
 header ul.contacts li a:hover svg {fill:#5d93ff;}
 
 @media (max-width:768px) {
+  header {padding:0 4px;}
+  header nav {margin-left:0px;}
   header ul.contacts {display:none;}
 }
 
