--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -141,8 +141,8 @@ footer .wrap {max-width:1024px;margin:0 auto;}
 .blog .toc a:hover {
   color: #3d3d3f;
   font-weight: 800;
-  /* transition: all 0.25s ease 0s;
-  transform: scale(1.1); */
+  transition: all 0.25s ease 0s;
+  transform: scale(1.1);
 }
 
 @media (min-width: 1300px) {
