툴메뉴 추가 전 모바일용 홈아이콘 추가

--- a/index.template.ejs
+++ b/index.template.ejs
@@ -8,6 +8,8 @@
   <meta name="keywords" content="">
   <title>김진규 개인홈페이지</title>
   <!-- <link type="text/css" rel="stylesheet" href="/src/www/css/style.css"> -->
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 
 <body>
