--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -27,11 +27,15 @@ header ul.contacts li {line-height:40px;text-align:center;width:40px;height:40px
 header ul.contacts li a svg {display:inline-block;width:16px;height:16px;margin:0 3px;}
 header ul.contacts li a svg {fill:#222;}
 header ul.contacts li a:hover svg {fill:#5d93ff;}
+header h1 .icon {display:none;}
 
 @media (max-width:768px) {
   header {padding:0 4px;}
   header nav {margin-left:0px;}
   header ul.contacts {display:none;}
+  header h1 {vertical-align:middle;}
+  header h1 .text {display:none;}
+  header h1 .icon {display:inline-block;font-size:32px;}
 }
 
 footer {text-align:center;font-size:14px;padding:8px 0;border-top:1px solid rgb(230,230,230);}
